--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -322,6 +322,7 @@ ImageWarp
 SubtractSky
 
 * Sky value::                   Definition of the sky value.
+* Tiling an image::             Defining a mesh grid on the image.
 * Sky value interpolation::     How blank grid elements are filled.
 * Invoking astsubtractsky::     Options and arguments to SubtractSky.
 
@@ -1527,7 +1528,7 @@ transformation in the image. Through his experiences, Sufi knew that
 this is because the image of heavenly bodies is actually transformed
 by the atmosphere or other sources outside the atmosphere (for example
 gravitational lenses) prior to being sampled on an image. Since that
-transformation occurs on a continues grid, to best approximate it, he
+transformation occurs on a continuous grid, to best approximate it, he
 should do all the work on a finer pixel grid. In the end he can
 resample the result to the initially desired grid size.
 
@@ -2091,7 +2092,7 @@ going to warn you and abort. In the case of executables like GPL
 GhostScript, if you install them at a later time, the program will
 run. This is because if required libraries are not present at build
 time, the executables cannot be built, but an executable is called by
-the built program at run time so if it becomes available, will be
+the built program at run time so if it becomes available, it will be
 used. If you do install an optional library later, you will have to
 rebuild Gnuastro and reinstall it for it to take effect.
 
@@ -3761,7 +3762,7 @@ If you only need to remember the short or long names of the options,
 @option{--help} is a great tool. Man pages are also provided for those
 who are use to this older system of documentation. This full manual is
 also available to you on the command line in Info format. If none of
-these seems to resolve the problems, there is a mailing list for which
+these seems to resolve the problems, there is a mailing list which
 enables you to get in touch with experienced Gnuastro users. In the
 subsections below each of these methods are reviewed.
 
@@ -6193,7 +6194,7 @@ in space based images where the atmosphere is no longer a problem.
 @cindex Mesh
 @cindex Gradient
 SubtractSky is a tool to find the sky value on a grid over the
-image. The size of the grid will determine how accuratly it can
+image. The size of the grid will determine how accurately it can
 account for gradients in the sky value. Such that if the gradient
 (change of sky value) is too sharp, a smaller grid size has to be
 chosen. However the results will be most accurate with a larger grid
@@ -6202,11 +6203,12 @@ size.
 
 @menu
 * Sky value::                   Definition of the sky value.
+* Tiling an image::             Defining a mesh grid on the image.
 * Sky value interpolation::     How blank grid elements are filled.
 * Invoking astsubtractsky::     Options and arguments to SubtractSky.
 @end menu
 
-@node Sky value, Sky value interpolation, SubtractSky, SubtractSky
+@node Sky value, Tiling an image, SubtractSky, SubtractSky
 @subsection Sky value
 
 @cindex Sky value
@@ -6220,7 +6222,7 @@ analysis the dimentionality of the data (image) is irrelevant. So if
 the data is an image (2D) with width of @mymath{w} pixels, then a
 pixel located on column @mymath{x} and row @mymath{y} (where all
 counting starts from zero and (0, 0) is located on the bottom left
-corner of the image), would have an index: @mymath{i=x\times{}w+y}.}
+corner of the image), would have an index: @mymath{i=x+y\times{}w}.}
 of the image can be written as follows:
 
 @itemize
@@ -6256,7 +6258,7 @@ P. G. (2001). Publications of the Astronomical Society of the Pacific.
 directly depend on the detection algorithm and its input
 parameters. Also note that no detection or cosmic ray removal
 algorithm is perfect. With these limitations in mind, the observed sky
-value for this pixel @mymath{S_i}) can be defined as
+value for this pixel (@mymath{S_i}) can be defined as
 
 @cindex Sky value
 @dispmath{S_i=B_i+U_i.}
@@ -6271,21 +6273,22 @@ for example in an image or part of an image, this equation translates
 to the average of undetected pixels.  With this definition of sky, the
 object flux in the data can be calculated with
 
-@dispmath{ T_{ij}=S_{ij}+O_{ij} \quad\rightarrow\quad
-           O_{ij}=T_{ij}-S_{ij}.}
+@dispmath{ T_{i}=S_{i}+O_{i} \quad\rightarrow\quad
+           O_{i}=T_{i}-S_{i}.}
 
 @noindent
 @cindex photo-electrons
 Hence, the more accurately @mymath{S_i} is measured, the more
-accurately the flux of the target object can be calculated. Similarly,
-any under(over) estimation in the sky will directly translate to an
-over(under) estimation of the measured object's flux.  In the fainter
-outskirts of an object a very small fraction of the photo-electrons in
-the pixels actually belong to objects. Therefore even a small over
-estimation of the sky value will result in the loss of a very large
-portion of this mock galaxy. Based on the definition above, the sky
-value is only correctly found when all the detected objects
-(@mymath{D_i} and @mymath{C_i}) have been removed from the data.
+accurately the flux of the target object can be measured
+(photometry). Similarly, any under(over) estimation in the sky will
+directly translate to an over(under) estimation of the measured
+object's flux.  In the fainter outskirts of an object a very small
+fraction of the photo-electrons in the pixels actually belong to
+objects. Therefore even a small over estimation of the sky value will
+result in the loss of a very large portion of most galaxies. Based on
+the definition above, the sky value is only correctly found when all
+the detected objects (@mymath{D_i} and @mymath{C_i}) have been removed
+from the data.
 
 
 @menu
@@ -6326,11 +6329,12 @@ distribution are approximately equal, we can argue that there is no
 significant data in the distribution. So we can consider the image to
 be made of a grid and use this argument to `detect' data in each grid
 element. When a grid element satisfies the condition above, we keep
-its mean value. Note that the sky was the mean of undetected
+its mean value. Recall that the sky was the mean of undetected
 pixels. Any grid element that dosn't satisfy this condition is kept
 with a blank value. Finally, when all the grid elements have been
 checked, we can interpolate over all the empty elements and smooth the
-final result to find the sky value over the full image.
+final result to find the sky value over the full image. See @ref{Sky
+value interpolation}.
 
 Note that through the difference of the mode and median we have
 actually `detected' data in the distribution. However this detection
@@ -6396,7 +6400,103 @@ are ultimately poor approximations.
 
 
 
-@node Sky value interpolation, Invoking astsubtractsky, Sky value, SubtractSky
+
+@node Tiling an image, Sky value interpolation, Sky value, SubtractSky
+@subsection Tiling an image
+
+@cindex Grid
+@cindex Tile
+@cindex Gradient
+@cindex Mesh grid
+Some of the programs in Gnuastro will need to divide the pixels in an
+image into individual tiles or a mesh grid to be able to deal with
+gradients. In this section we will explain the concept in detail and
+how the user can check the grid. In the case of SubtractSky, if the
+image is completely uniform then one sky value will suffice for the
+whole image. See @ref{Sky value} for the definition of the sky value.
+Unfortunately though as discussed in @ref{SubtractSky}, in most images
+taken with ground or space-based telescopes the sky value is not
+uniform. So we have to break the image up into small tiles on a mesh
+grid and find the sky value on those tiles.
+
+Meshes are considered to be a square with a side of
+@option{--meshsize} pixels. The best mesh size is directly related to
+the gradient on the image. In practice we assume that the gradient is
+not significant over each mesh. So if there is a strong gradient (for
+example in long wavelength ground based images) you have to choose a
+smaller mesh size and if there is no gradient (for example in space
+based images) you can choose a larger mesh size. If there is no
+gradient, a larger mesh will give more accurate results.
+
+@cindex CCD
+@cindex Amplifier
+@cindex Bias current
+@cindex Subaru Telescope
+@cindex Hyper Suprime-Cam
+@cindex Hubble Space Telescope
+For raw image processing, a simple mesh grid is not sufficient. Raw
+images are the unprocessed outputs of the camera detectors. Large
+detectors usually have multiple amplifiers, for example the Hubble
+Space Telecope Advanced Camera for Surveys (ACS) has four amplifiers
+over its full detector area dividing the square field of view to four
+smaller squares. Ground based image detectors are not exempt, for
+example each CCD of Subaru Telescope's gigantic Hyper Suprime-Cam
+camera (which has 104 CCDs) has four amplifiers, but they have the
+same height of the CCD and divide the width by four parts.
+
+@cindex Channel
+The bias current on each amplifier is different, and normaly bias
+subtraction is not accurately done. So after subtracting the bias
+current, you can clearly still identify the boundaries of different
+amplifiers by eye. This results in the final reduced data to have
+non-uniform amplifier-shaped regions with higher or lower background
+flux values. Such systematic biases will then propagate to all
+subsequent measurements we do on the data (for example photometry and
+subsequent stellar mass and star formation rate measurements in the
+case of galaxies). Therefore an accurate sky subtraction routine
+should also be able to account for such biases.
+
+To get an accurate result, the mesh boundaries should be located
+exactly on the amplifier boundaries. Otherwise, the meshes which lie
+over two amplifier regions are going to give very biased results and
+the amplifier boundary will still be present after sky subtraction.
+So in practice, we define `channel's. A channel is an independent mesh
+grid that covers one amplifier to ensure that the meshes do not pass
+the amplifier boundary. They are also used in subsequent steps as the
+area used to identify nearby neighbours to interpolate, see @ref{Sky
+value interpolation}. The number of channels along each axis can be
+specified by the user at run time through @option{--nch1} and
+@option{--nch2} or in the configuration files, see @ref{Configuration
+files}. The area of each channel will then be tiled by meshes of the
+given size and subsequent processing will be done on those meshes. If
+the image is processed or the detector only has one amplifier, you can
+set the number of channels in both axises to 1.
+
+Unlike the channel size, that has to be an exact multiple of the image
+size, the mesh size can be any number. If it is not an exact multiple
+of the image side, the last (rightest, for the first FITS dimention,
+and highest for the second when viewed in SAO ds9) mesh will have a
+different size than the rest. If the remainder of the image size
+divided by mesh size is larger than a certain fraction (value to
+@option{--lastmeshfrac}) of the mesh size along each axis, a new
+(smaller) mesh will be put there instead of a larger mesh. This is
+done to avoid the last mesh becoming too large compared to the other
+meshes in the grid. Generally, it is best practice to choose the mesh
+size such that the last mesh is only a few (negligible) pixels wider
+or thinner than the rest.
+
+The final mesh grid can be seen on the image with the
+@option{--checkmesh} option that is available to all programs which
+use the mesh grid for localized operations. When this option is
+called, a multi-extension FITS file with the input name and suffix
+@file{_mesh.fits} will be created along with the usual run of the
+program, see @ref{Automatic output}. The first extension will be the
+input image. For each mesh grid the image produces, there will be a
+subsequent extension. Each pixel in the grid extensions is labled to
+the mesh that it is part of. You can flip through the extensions to
+check the mesh sizes and locations compared to the input image.
+
+@node Sky value interpolation, Invoking astsubtractsky, Tiling an image, SubtractSky
 @subsection Sky value interpolation
 
 As explained in @ref{Finding the sky value}, the sky value will not be
@@ -6421,10 +6521,10 @@ the image. They are also prone to cause significant gradients in the
 image. So to find the interpolated value for each grid element,
 SubtractSky will look at a certain number of the nearest
 neighbours. The exact number can be specified through
-@option{--numnearest}. The median value of those mesh grids will be
-taken as the final value for each mesh. The median is chosen because
-on the fainter wings of bright objects, the mean can easily become
-biased.
+@option{--numnearest}. The median value of those grid elements will be
+taken as the final value for the blank mesh. The median is chosen
+because on the fainter wings of bright objects, the mean can easily
+become biased.
 
 Once all the grid elements are filled, the grid sky values should be
 smoothed. This is because when the median is used, there will be
@@ -6455,14 +6555,45 @@ $ astsubtractsky [OPTION ...] Image
 One line examples:
 
 @example
-$ astsubtractsky dataimage.fits
+$ astsubtractsky processedimage.fits
+$ astsubtractsky --nch1=2 --nch2=2 fromcamera.fits
 @end example
 
+@cindex Blank pixels
 The only required input to SubtractSky is the input data file that
 currently has to be only a 2D image. But in the future it might be
-useful to use it for 1D or 3D data too.
+useful to use it for 1D or 3D data too. Any pixels in the image with a
+blank value will be ignored in the analysis, see @ref{Blank
+pixels}. Alternatively a mask can be specified which indicates pixels
+to not be used (see @option{--mask} and @option{--mhdu}).
 
 @table @option
+
+@item -M
+@itemx --mask
+(@option{=STR}) Mask image file name. In case certain image pixels
+should not be considered, you can define a mask image file name with
+this option. Any pixel with a non-zero value in the specified mask
+image will not be considered in the input image. It goes without
+saying that the two images have to have the same size. If this option
+is not given and the @option{--mhdu} option has a different value from
+@option{--hdu}, then the input image name will be used. If a name is
+specified on the command line or in any of the configuration files, it
+will be used. If SubtractSky doesn't get any mask file name, it will
+use all the non-NaN pixels in the image. Therefore, specifying a mask
+file name in any of the configuration files is not mandatory.
+
+Note that if the mask image has blank pixels, then they act like
+pixels with non-zero values and will be masked (see @ref{Blank
+pixels}).
+
+@item -H
+@itemx --mhdu
+(@option{=STR}) The mask image header name or number. Similar to the
+@option{--hdu} option, see @ref{Common options}. Note that while the
+mask name is optional in the configuration files, the mask hdu is not
+and must be specified in at least one of the configuration files.
+
 
 @item -n
 @itemx --numnearest
@@ -6481,6 +6612,34 @@ than this value, the program will abort.
 @itemx --kernelwidth
 (@option{=INT}) The width of the average filter kernel used to smooth
 the interpolated image. See @ref{Sky value interpolation}.
+
+@item -s
+@itemx --meshsize
+(@option{=INT}) The size of each mesh, see @ref{Tiling an image}. If
+the width of all channels are not an exact multiple of the specified
+size, then the last mesh on each axis will have a different size to
+cover the full channel.
+
+@item -a
+@itemx --nch1
+(@option{=INT}) The number of channels along the first FITS axis
+(horizontal when viewed in SAO ds9). If the length of the image is not
+an exact multiple of this number, then SubtractSky will stop.
+
+@item -b
+@itemx --nch2
+(@option{=INT}) The number of channels along the second FITS axis,
+(horizontal when viewed in SAO ds9). Similar to @option{--nch1}.
+
+@item -L
+@itemx --lastmeshfrac
+(@option{=FLT}) Fraction of extra area on the last (rightest on the
+first FITS axis and highest/top on the second) mesh, to define a new
+one. See @ref{Tiling an image}.
+
+@item --checkmesh
+An image with suffix @file{_mesh.fits} will be created for you to
+check the mesh grid, see @ref{Tiling an image}.
 
 @end table
 
@@ -8013,7 +8172,7 @@ this central hub, you can view the list of activities that the
 developers are engaged in, their activity on the version controlled
 source, and other things. Each defined activity in the development
 cycle is known as an `issue' (or `item'). An issue can be a bug (see
-@ref{Report a bug}), or a suggested feature (@ref{Suggest new
+@ref{Report a bug}), or a suggested feature (see @ref{Suggest new
 feature}) or an enhancement or generally any @emph{one} job that is to
 be done. In Savannah, issues are classified into three categories or
 `tracker's:
@@ -8034,8 +8193,8 @@ please don't forget that Gnuastro is a volunteer effort), there should
 be no open items in this tracker.
 
 @item Bugs
-This tracker contains all the existing and resolved bugs in Gnuastro
-(problems with the existing tools).
+This tracker contains all the known bugs in the Gnuastro (problems
+with the existing tools).
 
 @item Tasks
 The items in this tracker contain the future plans (or new
